force-app/main/default/objects/Asset/fields/NIM_Turnover_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>NIM_Turnover_Inspection_Date__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NIM Turnover Inspection Date</label>
    <type>Date</type>
</CustomField>