force-app/main/default/objects/Asset/fields/Number_of_Stops__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Stops__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Number of Stops</label>
    <length>25</length>
    <type>Text</type>
</CustomField>