force-app/main/default/objects/Asset/fields/OEM_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>OEM_Serial_Number__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OEM Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>