force-app/main/default/objects/Asset/fields/Periodic_Test_Assigned_to_Territory_Mech__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Test_Assigned_to_Territory_Mech__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Periodic Test Assigned to Territory Mech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>