force-app/main/default/objects/Asset/fields/Periodic_Test_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Periodic_Test_Frequency__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Periodic Test Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>