force-app/main/default/objects/Asset/fields/Pump_Motor_Type__c.field-meta.xml
<CustomField>
    <fullName>Pump_Motor_Type__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Pump Motor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dry</fullName>
            </value>
            <value>
                <fullName>Dual Pump Units-Dry</fullName>
            </value>
            <value>
                <fullName>Dual Pump Units-Submersible</fullName>
            </value>
            <value>
                <fullName>Submersible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>