force-app/main/default/objects/Asset/fields/Rear_Openings__c.field-meta.xml
<CustomField>
    <fullName>Rear_Openings__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rear Openings</label>
    <length>25</length>
    <type>Text</type>
</CustomField>