force-app/main/default/objects/Asset/fields/Service_Mode__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Service Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Non Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>