force-app/main/default/objects/Asset/fields/SIP_URI__c.field-meta.xml
<CustomField>
    <fullName>SIP_URI__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SIP URI</label>
    <length>50</length>
    <type>Text</type>
</CustomField>