force-app/main/default/objects/Asset/fields/Smart_Srvcs_MAC_Address__c.field-meta.xml
<CustomField>
    <fullName>Smart_Srvcs_MAC_Address__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Smart Srvcs MAC Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>