force-app/main/default/objects/Asset/fields/Speed_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Speed_Measure_Type__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Speed Measure Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imperial</fullName>
            </value>
            <value>
                <fullName>Metric</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>