force-app/main/default/objects/Asset/fields/SVMXA360__AssetTag__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetTag__c</fullName>
    <description>Identifier used by the customer to track the Asset.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Asset Tag</label>
    <length>100</length>
    <type>Text</type>
</CustomField>