force-app/main/default/objects/Asset/fields/SVMXA360__DepotReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DepotReceivedDate__c</fullName>
    <description>Date that the asset arrived at the repair depot</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Depot Received Date</label>
    <type>Date</type>
</CustomField>