force-app/main/default/objects/Asset/fields/SVMXA360__DepotWarehouseLocation__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DepotWarehouseLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current depot/warehouse location of the asset. This is a lookup to a Location record.</description>
    <label>Depot/Warehouse Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>DepotLocationAssets</relationshipName>
    <type>Lookup</type>
</CustomField>