force-app/main/default/objects/Asset/fields/SVMXA360__LastRepairDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LastRepairDate__c</fullName>
    <description>Date that the asset was last repaired</description>
    <label>Last Repair Date</label>
    <type>Date</type>
</CustomField>