force-app/main/default/objects/Asset/fields/SVMXA360__LocationNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LocationNotes__c</fullName>
    <description>Indicates additional depot/warehouse location notes.</description>
    <label>Location Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>