force-app/main/default/objects/Asset/fields/SVMXA360__OperatingEnvironment__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OperatingEnvironment__c</fullName>
    <description>This field defines 3 operating environments</description>
    <label>Operating Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optimal</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Sub-Optimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>