force-app/main/default/objects/Asset/fields/SVMXA360__ReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReferenceNumber__c</fullName>
    <description>An alternate reference number for the Asset.  Can be used to store a Purchase Order number, Sales Order number, etc.</description>
    <label>Reference Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>