force-app/main/default/objects/Asset/fields/SVMXA360__RentalEndDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RentalEndDate__c</fullName>
    <description>Tracks the end date of the Asset rental period.</description>
    <label>Rental End Date</label>
    <type>Date</type>
</CustomField>