force-app/main/default/objects/Asset/fields/SVMXA360__RentalStartDate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RentalStartDate__c</fullName>
    <description>Tracks the start date of the Asset rental period.</description>
    <label>Rental Start Date</label>
    <type>Date</type>
</CustomField>