force-app/main/default/objects/Asset/fields/SVMXA360__ServiceNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceNotes__c</fullName>
    <description>Indicates additional service notes about the Asset.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>