force-app/main/default/objects/Asset/fields/SVMXA360__WarrantyEngineNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WarrantyEngineNotes__c</fullName>
    <description>Stores the error message that occurred during the automatic warranty creation.</description>
    <label>Warranty Engine Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>