force-app/main/default/objects/Asset/fields/Test_Inspection_and_Maint_Sche_req__c.field-meta.xml
<CustomField>
    <fullName>Test_Inspection_and_Maint_Sche_req__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Test/Inspection and Maint Sche req</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHJ Commission Date</fullName>
            </value>
            <value>
                <fullName>Gov&apos;t Inspection Date</fullName>
            </value>
            <value>
                <fullName>Periodic Safety Test Date</fullName>
            </value>
            <value>
                <fullName>CAT1 Safety Test Date</fullName>
            </value>
            <value>
                <fullName>Contract Start Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>