force-app/main/default/objects/Asset/fields/TKE_UnitType__c.field-meta.xml
<CustomField>
    <fullName>TKE_UnitType__c</fullName>
    <description>This field stores the Unit Type for an Asset</description>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Escalator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>