force-app/main/default/objects/Asset/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Heavy Duty</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Passenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>