force-app/main/default/objects/Asset/fields/Witness_Vendor_Listing__c.field-meta.xml
<CustomField>
    <fullName>Witness_Vendor_Listing__c</fullName>
    <description>created this as part of ADO user story 12187</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Witness Vendor Listing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>