force-app/main/default/objects/Asset/recordTypes/SVMXA360__CustomerOwned.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__CustomerOwned</fullName>
    <active>false</active>
    <description>Customer Assets</description>
    <label>Customer-Owned</label>
</RecordType>