force-app/main/default/objects/Asset/recordTypes/SVMXA360__RentalLoaner.recordType-meta.xml
<RecordType>
    <fullName>SVMXA360__RentalLoaner</fullName>
    <active>false</active>
    <description>OEM Assets that are temporarily loaned to customers</description>
    <label>Rental/Loaner</label>
</RecordType>