force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>ASSET.USAGE_END_DATE</columns>
    <columns>ASSET.address_state_code</columns>
    <columns>Location</columns>
    <columns>Usage__c</columns>
    <columns>Market_Segment__c</columns>
    <columns>SVMXA360__LastRepairDate__c</columns>
    <columns>ASSET.CREATED_DATE</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Assets</label>
</ListView>