force-app/main/default/objects/Asset/listViews/SVMXA360__AllAssetsView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllAssetsView</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.STATUS</columns>
    <columns>SVMXA360__AssetTag__c</columns>
    <columns>CONTACT.NAME</columns>
    <columns>Location</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Assets View</label>
</ListView>