force-app/main/default/objects/Asset/listViews/SVMXA360__AllLoanerRentalAssetsView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllLoanerRentalAssetsView</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ASSET.STATUS</columns>
    <columns>SVMXA360__AssetTag__c</columns>
    <columns>CONTACT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.SVMXA360__RentalLoaner</value>
    </filters>
    <label>A360 - All Loaner/Rental Assets View</label>
</ListView>